modif de la documentation